# SOCOM-Modern-Warfare

./: .check_size.py  .gen_clear.py  .gen_full_prd.py  .gen_hud.py  .gen_hud2.py  .gen_more.py  .gen_more2.py  .gen_prd.py  .gen_prd_full.py  .gen_step1.py  .gitignore  .markdownlint.json  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  bevy_primitives_inventory.md
.cargo/: config.toml
.github/: copilot-instructions.md
.omo/: boulder.json
crates/game/: Cargo.toml
crates/game/src/: audio_relay.rs  camera_control.rs  console.rs  level.rs  main.rs  messages.rs  pause.rs  player.rs  save_load.rs  settings.rs  settings_applier.rs
crates/game/src/ai/: enemy.rs  mod.rs  teammate.rs
crates/game/src/ammo_type/: mod.rs
crates/game/src/breathing/: mod.rs
crates/game/src/combat/: damage.rs  death.rs  impacts.rs  mod.rs  reload.rs  shooting.rs  vfx.rs  weapon_bob.rs  weapon_model.rs  weapon_state.rs
crates/game/src/combat/destruction/: damage.rs  debris.rs  glass.rs  mod.rs  penetration.rs  vehicles.rs
crates/game/src/controls/: mod.rs  stance.rs  turn_rate.rs
crates/game/src/drones/: mod.rs
crates/game/src/feedback/: enemy_fx.rs  hit_marker.rs  mod.rs  vignette.rs
crates/game/src/gear/: attachments.rs  deployable.rs  equipment_inventory.rs  equipment_types.rs  healing.rs  inventory.rs  items.rs  melee.rs  mod.rs  throwable.rs  workshop.rs
crates/game/src/hud/: achievement_popup.rs  elements.rs  kill_feed.rs  mod.rs  squad_status.rs  stamina_bar.rs  systems.rs  xp_notification.rs
crates/game/src/menu/: keybinds.rs  mod.rs  settings.rs
crates/game/src/missions/: mod.rs
crates/game/src/physics/: enemy_movement.rs  layers.rs  mod.rs  player_movement.rs  stance.rs
crates/game/src/progression/: achievements.rs  mod.rs  specializations.rs  stats.rs  xp.rs
crates/game/src/squad/: formation.rs  mod.rs  orders.rs
crates/game/src/stamina/: mod.rs
crates/game/src/states/: ingame.rs  loading.rs  main_menu.rs  mod.rs
crates/game/src/tactical/: command_wheel.rs  cover.rs  mod.rs  suppression.rs
crates/game/src/weapon_handling/: mod.rs
crates/game/src/weapons/: barrel.rs  caliber.rs  chassis.rs  magazine.rs  mod.rs  sight.rs  stock.rs  underbarrel.rs
(+64 files in other folders)
